syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message ChallengeBossStageInfo {
	bool HGIDJHFNCMA = 5;
	bool is_win = 4;
	uint32 stage_score = 12;
	uint32 buff_id = 9;
}