syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ExtraLineupType.proto";
import "LineupAvatar.proto";

message LineupInfo {
	bool KKAPCFFDNCH = 12;
	repeated LineupAvatar avatar_list = 2;
	repeated uint32 EOIFBNKPBGE = 11;
	uint32 FGPALNEPABC = 9;
	uint32 index = 3;
	bool is_virtual = 15;
	uint32 mp = 6;
	string name = 14;
	ExtraLineupType extra_lineup_type = 7;
	uint32 plane_id = 10;
	repeated uint32 LKLPOOEMOHI = 5;
	uint32 leader_slot = 13;
	repeated uint32 OLBHMCHJGKI = 1;
	uint32 max_mp = 8;
}
